[package]
name = "barcode-gen"
version = "0.3.2"
edition = "2024"
description = "A simple Code128 barcode generator"
license = "MIT"
repository = "https://github.com/J00LZ/barcode-gen"

[dependencies]
rayon = { version = "1.10.0", optional = true }

[features]
parallel = ["rayon"]

[dev-dependencies]
rand = "0.9.1"
