[package]
name = "barcode-gen"
version = "0.6.1"
edition = "2024"
description = "A simple Code128 barcode generator"
license = "MIT"
repository = "https://github.com/J00LZ/barcode-gen"
keywords = ["code128", "encoder", "barcode"]
categories = ["encoding"]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib", "rlib"]